--- a/semana-1/base-proyecto/index.html
+++ b/semana-1/base-proyecto/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700"
-      rel="stylesheet"
-    />
-    <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
+<!-- saved from url=(0172)https://firebasestorage.googleapis.com/v0/b/lernit-v2.appspot.com/o/assets%2Ffile%2F0.qjgsczjc950.5et5oaddceeindex.html?alt=media&token=d69e70c3-b666-4aac-ae0f-baf9d445b9f4 -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="./index_files/css" rel="stylesheet">
+    <link rel="shortcut icon" href="https://firebasestorage.googleapis.com/v0/b/lernit-v2.appspot.com/o/src/img/favicon.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="src/sass/main.scss" />
-    <script defer type="module" src="src/js/controller.js"></script>
+    <link rel="stylesheet" href="./index_files/main.scss">
+    <script defer="" src="./index_files/controller.js"></script>
 
     <title>forkify // Search over 1,000,000 recipes</title>
   </head>
@@ -19,13 +16,9 @@
   <body>
     <div class="container">
       <header class="header">
-        <img src="src/img/logo.png" alt="Logo" class="header__logo" />
+        <img src="./index_files/logo.png" alt="Logo" class="header__logo">
         <form class="search">
-          <input
-            type="text"
-            class="search__field"
-            placeholder="Search over 1,000,000 recipes..."
-          />
+          <input type="text" class="search__field" placeholder="Search over 1,000,000 recipes...">
           <button class="btn search__btn">
             <svg class="search__icon">
               <use href="src/img/icons.svg#icon-search"></use>
@@ -122,13 +115,8 @@
         </div>
 
         <p class="copyright">
-          &copy; Copyright by
-          <a
-            class="twitter-link"
-            target="_blank"
-            href="https://twitter.com/jonasschmedtman"
-            >Jonas Schmedtmann</a
-          >. Use for learning or your portfolio. Don't claim
+          © Copyright by
+          <a class="twitter-link" target="_blank" href="https://twitter.com/jonasschmedtman">Jonas Schmedtmann</a>. Use for learning or your portfolio. Don't claim
           as your own.
         </p>
       </div>
@@ -258,66 +246,38 @@
 
     <div class="overlay hidden"></div>
     <div class="add-recipe-window hidden">
-      <button class="btn--close-modal">&times;</button>
+      <button class="btn--close-modal">×</button>
       <form class="upload">
         <div class="upload__column">
           <h3 class="upload__heading">Recipe data</h3>
           <label>Title</label>
-          <input value="TEST" required name="title" type="text" />
+          <input value="TEST" required="" name="title" type="text">
           <label>URL</label>
-          <input value="TEST" required name="sourceUrl" type="text" />
+          <input value="TEST" required="" name="sourceUrl" type="text">
           <label>Image URL</label>
-          <input value="TEST" required name="image" type="text" />
+          <input value="TEST" required="" name="image" type="text">
           <label>Publisher</label>
-          <input value="TEST" required name="publisher" type="text" />
+          <input value="TEST" required="" name="publisher" type="text">
           <label>Prep time</label>
-          <input value="23" required name="cookingTime" type="number" />
+          <input value="23" required="" name="cookingTime" type="number">
           <label>Servings</label>
-          <input value="23" required name="servings" type="number" />
+          <input value="23" required="" name="servings" type="number">
         </div>
 
         <div class="upload__column">
           <h3 class="upload__heading">Ingredients</h3>
           <label>Ingredient 1</label>
-          <input
-            value="0.5,kg,Rice"
-            type="text"
-            required
-            name="ingredient-1"
-            placeholder="Format: 'Quantity,Unit,Description'"
-          />
+          <input value="0.5,kg,Rice" type="text" required="" name="ingredient-1" placeholder="Format: &#39;Quantity,Unit,Description&#39;">
           <label>Ingredient 2</label>
-          <input
-            value="1,,Avocado"
-            type="text"
-            name="ingredient-2"
-            placeholder="Format: 'Quantity,Unit,Description'"
-          />
+          <input value="1,,Avocado" type="text" name="ingredient-2" placeholder="Format: &#39;Quantity,Unit,Description&#39;">
           <label>Ingredient 3</label>
-          <input
-            value=",,salt"
-            type="text"
-            name="ingredient-3"
-            placeholder="Format: 'Quantity,Unit,Description'"
-          />
+          <input value=",,salt" type="text" name="ingredient-3" placeholder="Format: &#39;Quantity,Unit,Description&#39;">
           <label>Ingredient 4</label>
-          <input
-            type="text"
-            name="ingredient-4"
-            placeholder="Format: 'Quantity,Unit,Description'"
-          />
+          <input type="text" name="ingredient-4" placeholder="Format: &#39;Quantity,Unit,Description&#39;">
           <label>Ingredient 5</label>
-          <input
-            type="text"
-            name="ingredient-5"
-            placeholder="Format: 'Quantity,Unit,Description'"
-          />
+          <input type="text" name="ingredient-5" placeholder="Format: &#39;Quantity,Unit,Description&#39;">
           <label>Ingredient 6</label>
-          <input
-            type="text"
-            name="ingredient-6"
-            placeholder="Format: 'Quantity,Unit,Description'"
-          />
+          <input type="text" name="ingredient-6" placeholder="Format: &#39;Quantity,Unit,Description&#39;">
         </div>
 
         <button class="btn upload__btn">
@@ -328,5 +288,6 @@
         </button>
       </form>
     </div>
-  </body>
-</html>
+  
+
+</body></html>
