--- a/semana-1/base-proyecto/index.html
+++ b/semana-1/base-proyecto/index.html
@@ -4,11 +4,11 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="./index_files/css" rel="stylesheet">
+    <!-- <link href="./index_files/css" rel="stylesheet"> -->
     <link rel="shortcut icon" href="https://firebasestorage.googleapis.com/v0/b/lernit-v2.appspot.com/o/src/img/favicon.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="./index_files/main.scss">
-    <script defer="" src="./index_files/controller.js"></script>
+    <link rel="stylesheet" href="src/sass/main.scss">
+    <script defer="" type="module" src="src/js/controller.js"></script>
 
     <title>forkify // Search over 1,000,000 recipes</title>
   </head>
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <img src="./index_files/logo.png" alt="Logo" class="header__logo">
+        <img src="src/img/logo.png" alt="Logo" class="header__logo">
         <form class="search">
           <input type="text" class="search__field" placeholder="Search over 1,000,000 recipes...">
           <button class="btn search__btn">
@@ -131,11 +131,7 @@
           <p>Start by searching for a recipe or an ingredient. Have fun!</p>
         </div>
 
-        <!-- <div class="spinner">
-          <svg>
-            <use href="src/img/icons.svg#icon-loader"></use>
-          </svg>
-        </div> -->
+        <!--  -->
 
         <!-- <div class="error">
             <div>
@@ -153,75 +149,10 @@
             <span>Pasta with tomato cream sauce</span>
           </h1>
         </figure>
+      -->
 
-        <div class="recipe__details">
-          <div class="recipe__info">
-            <svg class="recipe__info-icon">
-              <use href="src/img/icons.svg#icon-clock"></use>
-            </svg>
-            <span class="recipe__info-data recipe__info-data--minutes">45</span>
-            <span class="recipe__info-text">minutes</span>
-          </div>
-          <div class="recipe__info">
-            <svg class="recipe__info-icon">
-              <use href="src/img/icons.svg#icon-users"></use>
-            </svg>
-            <span class="recipe__info-data recipe__info-data--people">4</span>
-            <span class="recipe__info-text">servings</span>
-
-            <div class="recipe__info-buttons">
-              <button class="btn--tiny btn--increase-servings">
-                <svg>
-                  <use href="src/img/icons.svg#icon-minus-circle"></use>
-                </svg>
-              </button>
-              <button class="btn--tiny btn--increase-servings">
-                <svg>
-                  <use href="src/img/icons.svg#icon-plus-circle"></use>
-                </svg>
-              </button>
-            </div>
-          </div>
-
-          <div class="recipe__user-generated">
-            <svg>
-              <use href="src/img/icons.svg#icon-user"></use>
-            </svg>
-          </div>
-          <button class="btn--round">
-            <svg class="">
-              <use href="src/img/icons.svg#icon-bookmark-fill"></use>
-            </svg>
-          </button>
-        </div>
-
-        <div class="recipe__ingredients">
-          <h2 class="heading--2">Recipe ingredients</h2>
-          <ul class="recipe__ingredient-list">
-            <li class="recipe__ingredient">
-              <svg class="recipe__icon">
-                <use href="src/img/icons.svg#icon-check"></use>
-              </svg>
-              <div class="recipe__quantity">1000</div>
-              <div class="recipe__description">
-                <span class="recipe__unit">g</span>
-                pasta
-              </div>
-            </li>
-
-            <li class="recipe__ingredient">
-              <svg class="recipe__icon">
-                <use href="src/img/icons.svg#icon-check"></use>
-              </svg>
-              <div class="recipe__quantity">0.5</div>
-              <div class="recipe__description">
-                <span class="recipe__unit">cup</span>
-                ricotta cheese
-              </div>
-            </li>
-          </ul>
-        </div>
-
+       
+      <!--
         <div class="recipe__directions">
           <h2 class="heading--2">How to cook it</h2>
           <p class="recipe__directions-text">
